SERVER-49723 [SBE] Using find() to query values in array field is broken in some cases