jstests/core/arrayfind10.js
@@ -1,6 +1,5 @@
 /**
- * Tests some of the find command's quirky semantics regarding how arrays are handled in various
- * situations. Includes tests for bugs described in SERVER-49720.
+ * Tests some of the find command's semantics with respect to how arrays are handled.
  */
 (function() {
 "use strict";
@@ -10,18 +9,54 @@ load("jstests/aggregation/extras/utils.js");  // arrayEq
 const t = db.jstests_arrayfind10;
 t.drop();
 
-t.save({a: "foo"});
-t.save({a: ["foo"]});
-t.save({a: [["foo"]]});
-t.save({a: [[["foo"]]]});
-
-function doTest1(t) {
-    assert(arrayEq(t.find({a: "foo"}, {_id: 0}).toArray(), [{a: "foo"}, {a: ["foo"]}]));
+function runWithAndWithoutIndex(keyPattern, testFunc) {
+    testFunc();
+    assert.commandWorked(t.createIndex(keyPattern));
+    testFunc();
 }
 
-doTest1(t);
-t.ensureIndex({'a': 1});
-doTest1(t);
+assert.commandWorked(t.insert([{a: "foo"}, {a: ["foo"]}, {a: [["foo"]]}, {a: [[["foo"]]]}]));
 
-t.drop();
+runWithAndWithoutIndex({a: 1}, () => {
+    assert(arrayEq(t.find({a: "foo"}, {_id: 0}).toArray(), [{a: "foo"}, {a: ["foo"]}]));
+});
+
+assert(t.drop());
+
+assert.commandWorked(t.insert([
+    {a: [123, "foo"]},
+    {a: ["foo", 123]},
+    {a: ["bar", "foo"]},
+    {a: ["bar", "baz", "foo"]},
+    {a: ["bar", "baz", 123]}
+]));
+
+runWithAndWithoutIndex({a: 1}, () => {
+    assert(arrayEq(
+        t.find({a: "foo"}, {_id: 0}).toArray(),
+        [{a: [123, "foo"]}, {a: ["foo", 123]}, {a: ["bar", "foo"]}, {a: ["bar", "baz", "foo"]}]));
+});
+
+assert(t.drop());
+
+assert.commandWorked(t.insert([
+    {a: [{}, {b: "foo"}]},
+    {a: [{b: "foo"}, {}]},
+    {a: [{b: 123}, {b: "foo"}]},
+    {a: [{b: "foo"}, {b: 123}]},
+    {a: [{b: "bar"}, {b: "foo"}]},
+    {a: [{b: "bar"}, {b: "baz"}, {b: "foo"}]},
+    {a: [{b: "bar"}, {b: "baz"}, {b: 123}]}
+]));
+
+runWithAndWithoutIndex({"a.b": 1}, () => {
+    assert(arrayEq(t.find({"a.b": "foo"}, {_id: 0}).toArray(), [
+        {a: [{}, {b: "foo"}]},
+        {a: [{b: "foo"}, {}]},
+        {a: [{b: 123}, {b: "foo"}]},
+        {a: [{b: "foo"}, {b: 123}]},
+        {a: [{b: "bar"}, {b: "foo"}]},
+        {a: [{b: "bar"}, {b: "baz"}, {b: "foo"}]}
+    ]));
+});
 })();
